[gd_scene load_steps=5 format=2]

[ext_resource path="res://Project/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Project/floor/floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Project/PowerMeter/PowerMeter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Project/world/mainWorld.gd" type="Script" id=4]

[node name="mainWorld" type="Node2D"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 147, 494 )
mass = 1.53061

[node name="Floors" type="Node2D" parent="."]
position = Vector2( -59, 0 )

[node name="floor" parent="Floors" instance=ExtResource( 2 )]
position = Vector2( 108, 566 )

[node name="floor2" parent="Floors" instance=ExtResource( 2 )]
position = Vector2( 327, 566 )

[node name="floor3" parent="Floors" instance=ExtResource( 2 )]
position = Vector2( 547, 566 )

[node name="floor4" parent="Floors" instance=ExtResource( 2 )]
position = Vector2( 767, 566 )

[node name="floor5" parent="Floors" instance=ExtResource( 2 )]
position = Vector2( 986, 566 )

[node name="powermeter" type="Node2D" parent="."]

[node name="powermeter1" parent="powermeter" instance=ExtResource( 3 )]
position = Vector2( 71, 38 )
rotation = 1.5708

[node name="powermeter2" parent="powermeter" instance=ExtResource( 3 )]
position = Vector2( 276, 39 )
rotation = 1.5708

[node name="powermeter3" parent="powermeter" instance=ExtResource( 3 )]
position = Vector2( 486, 40 )
rotation = 1.5708

[node name="powermeter4" parent="powermeter" instance=ExtResource( 3 )]
position = Vector2( 715, 40 )
rotation = 1.5708

[node name="powermeter5" parent="powermeter" instance=ExtResource( 3 )]
position = Vector2( 951, 39 )
rotation = 1.5708
